Back-end/src/main/java/com/example/error/UserIsParticipantAlreadyException.java
package com.example.error;

public class UserIsParticipantAlreadyException extends RuntimeException {

    public UserIsParticipantAlreadyException(String message) {
        super(message);
    }

}
